# audio-refinery

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dockerhub-description.yml  release.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  PERFORMANCE.md  USE_CASES.md  architecture.md  cli.md  deployment.md  development.md  dockerhub-overview.md  index.md  performance.md  service.md  use-cases.md
docs/schemas/: batch-summary-v1.json  combined-transcript-v1.json
openspec/changes/universal-alignment-strategy/: design.md  proposal.md  tasks.md
openspec/changes/universal-alignment-strategy/specs/forced-alignment/: spec.md
openspec/changes/universal-alignment-strategy/specs/model-lifecycle/: spec.md
openspec/changes/universal-alignment-strategy/specs/text-normalization/: spec.md
openspec/changes/universal-alignment-strategy/specs/transcription/: spec.md
scripts/: generate_schemas.py
src/: __init__.py  cli.py  diarizer.py  fs_utils.py  gpu_tflops.toml  gpu_utils.py  notifier.py  pipeline.py  sentiment_analyzer.py  separator.py  transcriber.py
src/models/: __init__.py  audio.py  diarization.py  sentiment.py  transcription.py
src/service/: __init__.py  api_schemas.py  app.py  auth.py  config.py  jobs.py  lifecycle.py  schemas.py  transcript.py  uri_io.py
tests/: conftest.py  test_cli.py  test_diarize_cli.py  test_diarizer.py  test_fs_utils.py  test_gpu_utils.py  test_integration.py  test_notifier.py  test_pipeline.py  test_pipeline_parallel.py  test_schemas_drift.py  test_sentiment_analyzer.py  test_sentiment_cli.py  test_separator.py  test_transcribe_cli.py  test_transcriber.py
tests/models/: test_diarization_models.py  test_models.py  test_sentiment_models.py  test_transcription_models.py
tests/service/: test_app.py  test_auth.py  test_e2e.py  test_init.py  test_integration.py  test_jobs.py  test_lifecycle.py  test_schemas.py  test_transcript.py  test_uri_io.py
