[project]
name = "audio-refinery"
version = "0.1.0"
description = "GPU-accelerated audio processing pipeline: vocal separation, speaker diarization, transcription, and sentiment analysis."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
authors = [
    { name = "Chris Colinsky", email = "chris@lunarcommand.xyz" }
]
keywords = [
    "audio", "speech", "transcription", "diarization", "sentiment",
    "demucs", "whisper", "pyannote", "gpu", "pipeline", "cli",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "demucs==4.0.1",
    "soundfile==0.12.1",
    "pyannote.audio>=3.1.1",
    "python-dotenv",
    "pydantic",
    "numpy<2.0.0",
    "pandas",
    "ffmpeg-python",
    "click>=8.1",
    "rich>=13.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
audio-refinery = "src.cli:cli"

[project.urls]
Homepage = "https://github.com/LunarCommand/audio-refinery"
Repository = "https://github.com/LunarCommand/audio-refinery"
Issues = "https://github.com/LunarCommand/audio-refinery/issues"
Changelog = "https://github.com/LunarCommand/audio-refinery/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

# whisperx conflicts with torchaudio==2.1.2 at the resolver level and cannot
# be listed as an optional dependency — uv would fail to generate a lock file.
# Install it separately after uv sync: make install-whisperx
# This stanza tells uv to inject setuptools into whisperx's build environment.
[tool.uv.extra-build-dependencies]
whisperx = ["setuptools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real Demucs + GPU (deselect with '-m \"not integration\"')",
]
addopts = ["-v"]
filterwarnings = [
    # Third-party library warnings — not actionable from this project
    "ignore:The get_cmap function was deprecated:DeprecationWarning",
    "ignore:builtin type.*no __module__:DeprecationWarning",
    "ignore:torchaudio._backend.set_audio_backend:UserWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle errors/warnings
    "F",         # pyflakes
    "I",         # isort
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "UP",        # pyupgrade
    "SIM",       # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM115", "SIM117"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
